fixed footer align

--- a/css/sentaku.css
+++ b/css/sentaku.css
@@ -287,20 +287,21 @@ div#pageTop{
  position:fixed;
  bottom:20px;
   right:20px;
-
 }
 
-footer{
+div#footer{
+	position: relative;
 	background-color: #f39800;
 	width: 100%;
 	height: 40px;
 }
-
 small{
+	position: absolute;
 	color: #fff;
 	display:inline-block;
 	font-size: 10px;
 	text-align: center;
 	width: 100%;
-	margin: auto auto;
+	height: 20px;
+	margin: 10px auto;
 }
